[tool.poetry]
name = "pelican-myst-reader"
version = "1.3.0"
description = "Pelican plugin for converting MyST's Markdown variant to HTML."
authors = ["Ashwin Vishnu <dev@fluid.quest>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "markdown", "myst"]
repository = "https://github.com/ashwinvis/myst-reader"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/ashwinvis/myst-reader/issues"

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.5"
markdown = {version = "^3.2.2", optional = true}
markdown-word-count = "^0.1.0"
beautifulsoup4 = "^4.9.3"
myst-parser = "^4.0.0"
docutils = ">=0.19"
# XXX Waiting for new releases of both sphinxcontrib-bibtex (> 2.6.2) and pybtex (> 0.24.0):
# https://github.com/mcmtroffaes/sphinxcontrib-bibtex/issues/345
# https://bitbucket.org/pybtex-devs/pybtex/issues/169/replace-pkg_resources-with
sphinxcontrib-bibtex = { git = "https://github.com/mcmtroffaes/sphinxcontrib-bibtex.git", rev = "73afc2329ef4ecc3e4b24fd9ee85461b3336c809" }
pybtex = { git = "https://bitbucket.org/pybtex-devs/pybtex.git", rev = "7066984c8776e3115ae8c78c22c695a184233ef5" }
pyyaml = "^6.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^1.0.0"
pytest-subtests = "^0.13.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-black = "^0.3.6"
invoke = "^2.2"
isort = "^5.8.0"
livereload = "^2.6"
markdown = "^3.2.2"
Werkzeug = "^3.0"
pre-commit = "^3.7.1"
python-lsp-server = "^1.5.0"
nox = "^2024.4.15"
poetry = "^1.2.2"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "MyST Reader"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.coverage.run]
omit = [
    "*/conf.py",
]

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" and "myst_reader" as separate import sections
known_pelican = "pelican"
known_myst = "myst_reader"

sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,MYST,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
