[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Ashwin Vishnu", email = "dev@fluid.quest" }]
license = { text = "AGPL-3.0" }
requires-python = "<4.0,>=3.10"
dependencies = [
    "pelican<5.0,>=4.5",
    "markdown-word-count<1.0.0,>=0.1.0",
    "beautifulsoup4<5.0.0,>=4.9.3",
    "myst-parser<5.0.0,>=4.0.0",
    "docutils>=0.19",
    "pybtex<1.0.0,>=0.25.1",
    "sphinxcontrib-bibtex<3.0.0,>=2.6.3",
    "pyyaml<7.0,>=6.0",
    "markdown-it-py[linkify,plugins]>=3.0.0",
]
name = "pelican-myst-reader"
version = "1.4.0"
description = "Pelican plugin for converting MyST's Markdown variant to HTML."
readme = "README.md"
keywords = ["pelican", "plugin", "markdown", "myst"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Funding = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/ashwinvis/myst-reader/issues"
Repository = "https://github.com/ashwinvis/myst-reader"
Documentation = "https://docs.getpelican.com"

[project.optional-dependencies]
markdown = ["markdown<4.0.0,>=3.2.2"]

[dependency-groups]
tests = [
    "pytest<9.0,>=8.0",
    "pytest-cov<6.0,>=5.0",
    "pytest-pythonpath<1.0.0,>=0.7.3",
    "pytest-sugar<2.0.0,>=1.0.0",
    "pytest-subtests<1.0.0,>=0.13.1",
]
dev = [
    "black<25.0.0,>=24.4.2",
    "invoke<3.0,>=2.2",
    "livereload<3.0,>=2.6",
    "markdown<4.0.0,>=3.2.2",
    "Werkzeug<4.0,>=3.0",
    "pre-commit<4.0.0,>=3.7.1",
    "nox<2025.0.0,>=2024.4.15",
]

[tool.hatch.build.targets.wheel]
packages = ["pelican"]

[tool.coverage.run]
omit = ["*/conf.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "PLE"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["pelican"]
known-third-party = ["myst_reader"]
